[project]
name = "SERDatasets"
version = "1.0.9"
description = "Code for loading and processing some common SER datasets"
dependencies = [
  "torch>=2.3.1+cu118",
  "torch-dct>=0.1.6",
  "torchaudio>=2.3.1+cu118",
  "torchvision>=0.18.1+cu118",
  "tqdm>=4.66.4",
  "transformers>=4.41.2",
  "pandas>=2.2.2",
  "librosa>=0.10.2",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
