[project]
name = "SERDatasets"
version = "1.1.5"
description = "Code for loading and processing some common SER datasets"
dependencies = [
  "torch>=2.3.1",
  "torch-dct>=0.1.6",
  "torchaudio>=2.3.1",
  "torchvision>=0.18.1",
  "tqdm>=4.66.4",
  "transformers>=4.41.2",
  "pandas>=2.2.2",
  "librosa>=0.10.2",
  "h5py>=3.11.0",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
